--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,56 @@
   --text: hsla(0, 0%, 100%, 0.88);
 }
 
+body {
+  margin: 0;
+}
+
+.navBar {
+  background-color: #333;
+  color: tan;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  padding: 0 1rem;
+
+}
+
+.navName {
+  color: inherit;
+  font-size: 2rem;
+}
+
+.navLinks {
+  background: tan;
+  color: black;
+  font-size: 1rem;
+  height: 100%;
+  display: stretch;
+  align-items: center;
+  padding: 2rem 2rem 2rem 2rem;
+}
+
+.navLinks:active {
+  background-color: rgb(97, 59, 8);
+}
+
+.navLinks:hover {
+  background-color: white;
+  height: 100%;
+}
+
+input {
+  width: 75%;
+  padding: 5px;
+  font-size: 2rem;
+  
+}
+
+.container-one, .container-two, .container-three, .container-four, .container-five, .container-six {
+  margin: 20px;
+  padding: 15px;
+  border: 2px solid #333;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
